established data model, made first entries

--- a/style.css
+++ b/style.css
@@ -1,1 +1,23 @@
-// TODO: add styles here
+table {
+    border-collapse: collapse;
+}
+
+.matrix td, .matrix th {
+    border: solid 1px gray;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0;
+    padding: .25em;
+}
+
+td.empty {
+    opacity: 0.125;
+}
+
+a, a:active {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline dotted 1px;
+}
